Fixed spacing of seperators.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,7 +244,7 @@
 	hr {
 		border: 0;
 		border-bottom: solid 1px #c8cccf;
-		margin: 3em 0;
+		margin: 2.5em 0;
 	}
 
 /* Form */
